# MasterThesis-DermAgent

./: .gitignore  README.md  environment.yml  interface.py  main.py  model_env.env  pyproject.toml
DermAgent/agent/: agent.py
DermAgent/docs/: system_prompts.txt
DermAgent/tools/: SwinModelMultiTask.py  __init__.py  classification.py  detection.py  explanation.py  utils.py
checkpoints/: exp-HAM+Derm7pt-all+BCN+HAM-bin+DermNet+Fitzpatrick.yaml
experiments/CBM/: extractData.py
experiments/CBM/results/: statistics-val-Fitzpatrick+SKINCON_CBM_independent_1-image.csv  statistics-val-Fitzpatrick+SKINCON_CBM_independent_2-image.csv  statistics-val-Fitzpatrick+SKINCON_CBM_joint_lambda-0.001-image.csv  statistics-val-Fitzpatrick+SKINCON_CBM_joint_lambda-0.01-image.csv  statistics-val-Fitzpatrick+SKINCON_CBM_joint_lambda-0.1-image.csv  statistics-val-Fitzpatrick+SKINCON_CBM_joint_lambda-1-image.csv
experiments/detection/: test_detection.py
experiments/explainableAI/: Explainable_over_MUTE_predictions.py  XAI_for_derm_image.ipynb  attention_based_XAI.ipynb  token_level_XAI.ipynb
experiments/ham10k/: Ham10k_Gpt.ipynb  Ham10k_Gpt_explanations.ipynb  Ham10k_Mute.py  Retrive_Metadata_embeddings.py  experiment_utils.py
experiments/results/ham10kClassification/: error_logs.json  error_logs_Mute.json  error_logs_allHeads.json  error_logs_allHeads_Metadata.json  medDerm_classification_results_Mute.json  medDerm_classification_results_gpt4o+Mute.json  medDerm_classification_results_gpt4o+Mute_All_Heads.json  medDerm_classification_results_gpt4o+Mute_All_Heads_Metadata.json  medDerm_classification_results_gpt4o.json  medDerm_classification_results_gpt4o_binary.json  medDerm_classification_results_gpt4o_binary_tool.json  medDerm_classification_results_gpt4o_explanation.json
